// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> Normal Should match normal sidebar snapshot 1`] = `
<div
  className="wrap testWrap"
>
  <div
    className="content testContent"
  >
    <button
      className="icon"
    >
      <svg
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67V7z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </button>
    <button
      className="icon"
    >
      <svg
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 3v13.714h24V3H0zm8.598 12H4.291a2.574 2.574 0 0 0-2.577-2.577v-4.28a3.432 3.432 0 0 0 3.429-3.429h3.455c-1.066 1.26-1.74 3.097-1.74 5.143 0 2.047.674 3.884 1.74 5.143zm13.688-2.577A2.59 2.59 0 0 0 19.714 15h-4.312c1.066-1.259 1.74-3.096 1.74-5.143 0-2.046-.674-3.884-1.74-5.143h3.455a3.432 3.432 0 0 0 3.429 3.429v4.28zM0 18.43h24v2H0v-2z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </button>
    <button
      className="icon iconActive"
    >
      <svg
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M21.07 13.2c.06-.36.06-.78.06-1.2 0-.42-.06-.78-.06-1.2l2.564-1.98c.245-.18.306-.48.123-.78L21.314 3.9c-.122-.24-.489-.36-.733-.24l-3.054 1.2c-.61-.48-1.343-.9-2.076-1.2L15.023.48a.655.655 0 0 0-.61-.48H9.525c-.305 0-.55.24-.61.48l-.489 3.18c-.733.3-1.404.72-2.077 1.2l-3.053-1.2c-.306-.12-.611 0-.733.24L.12 8.04c-.122.24-.061.6.122.78l2.626 1.98c0 .42-.06.78-.06 1.2 0 .42.06.78.06 1.2L.304 15.18c-.244.18-.305.48-.122.78l2.443 4.14c.122.24.489.36.733.24l3.054-1.2c.61.48 1.343.9 2.076 1.2l.489 3.18c.061.3.305.48.61.48h4.886c.306 0 .55-.24.611-.48l.49-3.18c.732-.3 1.404-.72 2.075-1.2l3.054 1.2c.306.12.611 0 .733-.24l2.443-4.14c.122-.24.061-.6-.122-.78L21.07 13.2zm-9.1 3c-2.383 0-4.276-1.86-4.276-4.2s1.893-4.2 4.275-4.2c2.383 0 4.276 1.86 4.276 4.2s-1.893 4.2-4.276 4.2z"
          fill="currentColor"
          fillRule="nonzero"
        />
        <path
          d="M11.97 16.2c-2.383 0-4.276-1.86-4.276-4.2s1.893-4.2 4.275-4.2c2.383 0 4.276 1.86 4.276 4.2s-1.893 4.2-4.276 4.2z"
          fill="#5AC46A"
        />
      </svg>
    </button>
  </div>
  <div
    className="expand testExpand"
  >
    <div>
      <div
        className="typo title subTitle black left"
      >
        Settings
      </div>
      <ul
        className="menus"
      >
        <div
          className="Collapsible"
        >
          <span
            className="Collapsible__trigger is-open"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={null}
            tabIndex={null}
          >
            <li
              className="menu menuActive"
            >
              <span
                className="typo h5 inherit left"
              >
                General
              </span>
              <span
                className="menuIcon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M6.175 13.333L10 9.517l3.825 3.816L15 12.158l-5-5-5 5z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                    <path
                      d="M0 0h20v20H0z"
                    />
                  </g>
                </svg>
              </span>
            </li>
          </span>
          <div
            className="Collapsible__contentOuter"
            onTransitionEnd={[Function]}
            style={
              Object {
                "WebkitTransition": "none",
                "height": "auto",
                "msTransition": "none",
                "overflow": "hidden",
                "transition": "none",
              }
            }
          >
            <div
              className="Collapsible__contentInner"
            >
              <ul
                className="menus"
              >
                <li
                  className="subMenu subMenuActive"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Company
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Departments
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Gradings
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Branches
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    WorkFlows
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="Collapsible"
        >
          <span
            className="Collapsible__trigger is-closed"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={null}
            tabIndex={null}
          >
            <li
              className="menu"
            >
              <span
                className="typo h5 inherit left"
              >
                eTime
              </span>
              <span
                className="menuIcon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M6.175 6.667L10 10.483l3.825-3.816L15 7.842l-5 5-5-5z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                    <path
                      d="M0 20h20V0H0z"
                    />
                  </g>
                </svg>
              </span>
            </li>
          </span>
          <div
            className="Collapsible__contentOuter"
            onTransitionEnd={[Function]}
            style={
              Object {
                "WebkitTransition": "height 400ms ease-in-out",
                "height": 0,
                "msTransition": "height 400ms ease-in-out",
                "overflow": "hidden",
                "transition": "height 400ms ease-in-out",
              }
            }
          >
            <div
              className="Collapsible__contentInner"
            >
              <div />
            </div>
          </div>
        </div>
        <div
          className="Collapsible"
        >
          <span
            className="Collapsible__trigger is-closed"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={null}
            tabIndex={null}
          >
            <li
              className="menu"
            >
              <span
                className="typo h5 inherit left"
              >
                ePayroll
              </span>
              <span
                className="menuIcon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M6.175 6.667L10 10.483l3.825-3.816L15 7.842l-5 5-5-5z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                    <path
                      d="M0 20h20V0H0z"
                    />
                  </g>
                </svg>
              </span>
            </li>
          </span>
          <div
            className="Collapsible__contentOuter"
            onTransitionEnd={[Function]}
            style={
              Object {
                "WebkitTransition": "height 400ms ease-in-out",
                "height": 0,
                "msTransition": "height 400ms ease-in-out",
                "overflow": "hidden",
                "transition": "height 400ms ease-in-out",
              }
            }
          >
            <div
              className="Collapsible__contentInner"
            >
              <div />
            </div>
          </div>
        </div>
        <li
          className="menu"
        >
          <span
            className="typo h5 inherit left"
          >
            Users
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Sidebar /> Normal Should match sidebar expanded snapshot 1`] = `
<div
  className="wrap testWrap"
>
  <div
    className="content testContent"
  >
    <button
      className="icon"
    >
      <svg
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67V7z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </button>
    <button
      className="icon"
    >
      <svg
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 3v13.714h24V3H0zm8.598 12H4.291a2.574 2.574 0 0 0-2.577-2.577v-4.28a3.432 3.432 0 0 0 3.429-3.429h3.455c-1.066 1.26-1.74 3.097-1.74 5.143 0 2.047.674 3.884 1.74 5.143zm13.688-2.577A2.59 2.59 0 0 0 19.714 15h-4.312c1.066-1.259 1.74-3.096 1.74-5.143 0-2.046-.674-3.884-1.74-5.143h3.455a3.432 3.432 0 0 0 3.429 3.429v4.28zM0 18.43h24v2H0v-2z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </button>
    <button
      className="icon iconActive"
    >
      <svg
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M21.07 13.2c.06-.36.06-.78.06-1.2 0-.42-.06-.78-.06-1.2l2.564-1.98c.245-.18.306-.48.123-.78L21.314 3.9c-.122-.24-.489-.36-.733-.24l-3.054 1.2c-.61-.48-1.343-.9-2.076-1.2L15.023.48a.655.655 0 0 0-.61-.48H9.525c-.305 0-.55.24-.61.48l-.489 3.18c-.733.3-1.404.72-2.077 1.2l-3.053-1.2c-.306-.12-.611 0-.733.24L.12 8.04c-.122.24-.061.6.122.78l2.626 1.98c0 .42-.06.78-.06 1.2 0 .42.06.78.06 1.2L.304 15.18c-.244.18-.305.48-.122.78l2.443 4.14c.122.24.489.36.733.24l3.054-1.2c.61.48 1.343.9 2.076 1.2l.489 3.18c.061.3.305.48.61.48h4.886c.306 0 .55-.24.611-.48l.49-3.18c.732-.3 1.404-.72 2.075-1.2l3.054 1.2c.306.12.611 0 .733-.24l2.443-4.14c.122-.24.061-.6-.122-.78L21.07 13.2zm-9.1 3c-2.383 0-4.276-1.86-4.276-4.2s1.893-4.2 4.275-4.2c2.383 0 4.276 1.86 4.276 4.2s-1.893 4.2-4.276 4.2z"
          fill="currentColor"
          fillRule="nonzero"
        />
        <path
          d="M11.97 16.2c-2.383 0-4.276-1.86-4.276-4.2s1.893-4.2 4.275-4.2c2.383 0 4.276 1.86 4.276 4.2s-1.893 4.2-4.276 4.2z"
          fill="#5AC46A"
        />
      </svg>
    </button>
  </div>
  <div
    className="expand testExpand expandActive"
  >
    <div>
      <div
        className="typo title subTitle black left"
      >
        Settings
      </div>
      <ul
        className="menus"
      >
        <div
          className="Collapsible"
        >
          <span
            className="Collapsible__trigger is-open"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={null}
            tabIndex={null}
          >
            <li
              className="menu menuActive"
            >
              <span
                className="typo h5 inherit left"
              >
                General
              </span>
              <span
                className="menuIcon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M6.175 13.333L10 9.517l3.825 3.816L15 12.158l-5-5-5 5z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                    <path
                      d="M0 0h20v20H0z"
                    />
                  </g>
                </svg>
              </span>
            </li>
          </span>
          <div
            className="Collapsible__contentOuter"
            onTransitionEnd={[Function]}
            style={
              Object {
                "WebkitTransition": "none",
                "height": "auto",
                "msTransition": "none",
                "overflow": "hidden",
                "transition": "none",
              }
            }
          >
            <div
              className="Collapsible__contentInner"
            >
              <ul
                className="menus"
              >
                <li
                  className="subMenu subMenuActive"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Company
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Departments
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Gradings
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    Branches
                  </span>
                </li>
                <li
                  className="subMenu"
                >
                  <span
                    className="typo h5 inherit left"
                  >
                    WorkFlows
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="Collapsible"
        >
          <span
            className="Collapsible__trigger is-closed"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={null}
            tabIndex={null}
          >
            <li
              className="menu"
            >
              <span
                className="typo h5 inherit left"
              >
                eTime
              </span>
              <span
                className="menuIcon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M6.175 6.667L10 10.483l3.825-3.816L15 7.842l-5 5-5-5z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                    <path
                      d="M0 20h20V0H0z"
                    />
                  </g>
                </svg>
              </span>
            </li>
          </span>
          <div
            className="Collapsible__contentOuter"
            onTransitionEnd={[Function]}
            style={
              Object {
                "WebkitTransition": "height 400ms ease-in-out",
                "height": 0,
                "msTransition": "height 400ms ease-in-out",
                "overflow": "hidden",
                "transition": "height 400ms ease-in-out",
              }
            }
          >
            <div
              className="Collapsible__contentInner"
            >
              <div />
            </div>
          </div>
        </div>
        <div
          className="Collapsible"
        >
          <span
            className="Collapsible__trigger is-closed"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={null}
            tabIndex={null}
          >
            <li
              className="menu"
            >
              <span
                className="typo h5 inherit left"
              >
                ePayroll
              </span>
              <span
                className="menuIcon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M6.175 6.667L10 10.483l3.825-3.816L15 7.842l-5 5-5-5z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                    <path
                      d="M0 20h20V0H0z"
                    />
                  </g>
                </svg>
              </span>
            </li>
          </span>
          <div
            className="Collapsible__contentOuter"
            onTransitionEnd={[Function]}
            style={
              Object {
                "WebkitTransition": "height 400ms ease-in-out",
                "height": 0,
                "msTransition": "height 400ms ease-in-out",
                "overflow": "hidden",
                "transition": "height 400ms ease-in-out",
              }
            }
          >
            <div
              className="Collapsible__contentInner"
            >
              <div />
            </div>
          </div>
        </div>
        <li
          className="menu"
        >
          <span
            className="typo h5 inherit left"
          >
            Users
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
